# drugcare

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.agents/config/: agent-registry.md
.agents/shared/: API_CONTRACT.md  ARCHITECTURE.md  DECISIONS_LOG.md  ERROR_LOG.md  PROJECT_SPEC.md  STATUS_BOARD.md
.github/: dependabot.yml
.github/workflows/: ci.yml  daily-review.yml  deploy-backend.yml  seed-data.yml
.husky/: commit-msg  pre-commit
content/news/: fda-fluoroquinolone-tendon-warning.md  mfds-acetaminophen-dosage-update.md  mfds-proton-pump-inhibitor-longterm.md
content/research/: 40903694-safety-and-pharmacokinetics-evaluation-of-oroxylin-a-in-c.md  41135614-pharmacokinetic-and-pharmacodynamic-herb-drug-interaction.md  41239076-effect-of-food-on-iron-absorption-in-patients-with-iron-d.md  41262006-reducing-the-burden-of-interaction-studies-in-cancer-pati.md  41311097-pharmacokinetics-and-bioequivalence-of-ilaprazole-enteric.md  41320912-effects-of-high-and-low-fat-meals-on-the-bioavailability.md  41443115-boosting-muscle-health-in-aging-rats-the-synergistic-eff.md  41448973-pharmaceutical-interviews-in-onco-haematology-and-so-cal.md  41529561-synergistic-anticoccidial-effects-of-pomegranate-peel-ext.md  41532375-unregulated-use-of.md  41555108-the-effect-of-taking-cabozantinib-with-a-light-breakfast.md  41559531-2025-new-drug-update-part-2-recent-approvals-and-clini.md  41560336-open-label-study-assessing-relative-and-absolute-bioavail.md  41574599-pharmacokinetic-interaction-between-isavuconazole-and-rif.md  41587947-clinical-characteristics-and-drug-drug-interactions-in-hu.md  41660717-observed-tamoxifen-drug-interactions-are-dependent-on-bot.md  41664619-evaluation-of-drug-drug-interactions-associated-with-meta.md  41671262-prevalence-of-polypharmacy-and-drug-interactions-in-geria.md  41671293-polypharmacy-and-potential-drug-drug-interactions-among-o.md  41671652-clinical-reliability-and-concordance-of-drug-drug-interac.md  41686841-effects-of-matcha-green-tea-on-the-pharmacokinetics-of-na.md  41696832-explaining-clinically-important-variability-in-response-t.md  41755543-impact-of-thiazides-and-fluoropyrimidines-interaction-on.md  (+11 more)
docs/: TECH_STACK.md  app-improvement-plan.md  competitive-analysis.md  deployment-manual.md  drugs-com-comparison.md  production-checklist.md  remaining-tasks.md  review-agent-plan.md  service-analysis.md  store-listing.md
nginx/: nginx.conf
scripts/: build-flutter.sh  collect_international.py  expand_drugs.py  expand_dur.py  migrate-tips.mjs
tests/: conftest.py  test_ai_explanation_service.py  test_cabinet_router.py  test_cabinet_service.py  test_device_auth_web.py  test_drug_router.py  test_drug_service.py  test_drug_slug_api.py  test_feedback_router.py  test_interaction_router.py  test_interaction_service.py  test_metrics_router.py  test_reminder_router.py  test_reminder_service.py  test_search_router.py  test_suggest_services.py  test_supplement_router.py  test_supplement_service.py  test_supplement_slug_api.py
(+564 files in other folders)
