[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yakmeogeo"
version = "0.1.0"
description = "약먹어 — 복약 안전 체커 백엔드"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear (일반 버그 패턴)
    "S",    # flake8-bandit (보안)
    "UP",   # pyupgrade (Python 3.11+ 최적화)
    "SIM",  # flake8-simplify (단순화 가능 코드)
]

[tool.ruff.lint.per-file-ignores]
"src/backend/main.py" = ["E402"]
"src/backend/services/supplement_service.py" = ["E402", "I001"]
"tests/**" = ["S101"]  # assert 허용
"src/backend/routers/**" = ["B008"]  # FastAPI Depends() 패턴 허용
"src/backend/middleware/**" = ["SIM102"]  # 기존 nested if 패턴 유지
"src/backend/models/**" = ["UP042"]  # str+Enum 패턴 (Python 3.10 호환)
"src/backend/services/**" = ["UP017", "S110"]  # timezone.utc 기존 패턴, except pass
"src/backend/utils/**" = ["UP017", "S324"]  # timezone.utc 기존 패턴, md5 캐시키용

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
